Updates Made in this commit: .) MPS Updated Progress counter & setup methods / removed unnecessary variables
Next To Do:

.) MPS methods and ingredients table functions need to be updated.

.) Edit Screen delete / refresh btn

.) MPS refactored methods

Previous Updates:
.)

Errors
.)